add_executable(0001a 0001a.c)

add_executable(0004a 0004a.c)

add_executable(0071a 0071a.c)

add_executable(1505a 1505a.c)
add_executable(1505b 1505b.c)
add_executable(1505c 1505c.c)
add_executable(1505d 1505d.c)

add_executable(1684a 1684a.c)

add_executable(1697a 1697a.c)

add_executable(1698a 1698a.c)

add_executable(1700a 1700a.c)
add_executable(1700c 1700c.c)

add_executable(1701a 1701a.c)
add_executable(1701b 1701b.c)
